compiler/tools/fpp-check/test/enum_duplicate_value.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/enum_duplicate_value.fpp: 3.17
enum E { X = a, Y = b + 1 }
                ^
error: duplicate enum value 2
previous occurrence was here:
[ local path prefix ]/compiler/tools/fpp-check/test/enum_duplicate_value.fpp: 3.10
enum E { X = a, Y = b + 1 }
         ^
